fix level 50 word choices font size, fix zen loading page font size (too small)

--- a/app/assets/stylesheets/levels.css.scss
+++ b/app/assets/stylesheets/levels.css.scss
@@ -845,9 +845,9 @@ html, body {
 .zen_loading {
   color: #aaa;
   display: none;
-  font-size: 3.5vh;
+  font-size: 6vh;
   .small {
-    font-size: 2vh;
+    font-size: 4.5vh;
   }
 }
 
